--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Philby Starter Theme
+Theme Name: Philby Blockstarter Theme
 Theme URI: https://github.com/philbraun/wptheme-starter-fse
 Author: Philby
 Author URI: https://philby.ch
